--- a/examples/commit_batch/Cargo.toml
+++ b/examples/commit_batch/Cargo.toml
@@ -13,3 +13,9 @@ license.workspace = true
 nomt = { path = "../../nomt"  }
 anyhow = "1.0.81"
 sha2 = "0.10.6"
+prost = "0.11"
+prost-types = "0.11"
+clap = { version = "4.2", features = ["derive"] }
+
+[build-dependencies]
+prost-build = "0.11"
